more styling, some content added

--- a/public/pages/client-server-model/client-server-model.html
+++ b/public/pages/client-server-model/client-server-model.html
@@ -1,5 +1,14 @@
-<div class="content">
   <h1>Client-server Model</h1>
-  <p>Side om Client-server Model</p>
-</div>
-<script type="module" src="./client-server-model.js"></script>
+  <pre>
+    <code>
+        <strong>Client → Server:</strong> Klienten sender en HTTP-forespørgsel til serveren.
+        <strong>Client ← Server:</strong> Serveren svarer med en HTTP-response til clienten.
+    </code>
+  </pre>
+
+  <p>Klienten sender en forespørgsel til serveren. Serveren modtager og behandler forespørgslen, afgør hvad der bliver anmodet om, og sender en respons tilbage til klienten med de anmodede data eller bekræftelse af handlingen. Klienten modtager en respons og kan derefter vise eller bruge de modtagne data. Dette sker via et fetch-kald.</p>
+
+  <p>Client-server-modellen er en grundlæggende arkitektonisk komponent, der ligger til grund for kommunikationen mellem klienten og serveren. Den danner grundlaget for applikationer og muliggør effektiv dataudveksling og interaktion.</p>
+
+
+<script type="module" src="/pages/client-server-model/client-server-model.js"></script>
