--- a/public/pages/express/express.html
+++ b/public/pages/express/express.html
@@ -1,4 +1,3 @@
-<div class="content">
   <h1>Express</h1>
   <p>Side om Express</p>
   <pre class="snippet-javascript">
@@ -24,5 +23,4 @@ PS C:\Users\tommy\datamatiker\nodejs\mandatory_1> nodemon.cmd app.js
 Server is running in port 8080
                 </code>
             </pre>
-</div>
-<script type="module" src="./express.js"></script>
+<script type="module" src="pages/express/express.js"></script>
