--- a/public/pages/nodemon/nodemon.html
+++ b/public/pages/nodemon/nodemon.html
@@ -1,5 +1,3 @@
-<div class="content">
   <h1>Nodemon</h1>
   <p>Side om Nodemon</p>
-</div>
-<script type="module" src="./nodemon.js"></script>
+<script type="module" src="pages/nodemon/nodemon.js"></script>
