--- a/public/pages/type-coercion/type-coercion.html
+++ b/public/pages/type-coercion/type-coercion.html
@@ -1,5 +1,3 @@
-<div class="content">
   <h1>Type coercion</h1>
   <p>Side om type coercion</p>
-</div>
-<script type="module" src="./type-coercion.js"></script>
+<script type="module" src="/pages/type-coercion/type-coercion.js"></script>
