--- a/public/pages/client-server-model/client-server-model.html
+++ b/public/pages/client-server-model/client-server-model.html
@@ -1,8 +1,8 @@
   <h1>Client-server Model</h1>
   <pre>
     <code>
-        <strong>Client → Server:</strong> Klienten sender en HTTP-forespørgsel til serveren.
-        <strong>Client ← Server:</strong> Serveren svarer med en HTTP-response til clienten.
+Client → Server: Klienten sender en HTTP-forespørgsel til serveren.
+Client ← Server: Serveren svarer med en HTTP-response til clienten.
     </code>
   </pre>
 
