code language header added to each snippet

--- a/public/pages/express/express.html
+++ b/public/pages/express/express.html
@@ -1,19 +1,19 @@
   <h1>Express</h1>
   <p>Side om Express</p>
-  <pre class="snippet-javascript">
-                <code>
+  <pre class="code-snippet">
+                <code class="language-js">
 function helloWorld() {
     console.log("Hello, World!");
 }
                 </code>
             </pre>
-  <pre class="snippet-html">
-                <code >
+  <pre class="code-snippet">
+                <code class="language-html">
 &lt;h2&gt;Eksempel på HTML&lt;/h2&gt;
                 </code>
             </pre>
-  <pre class="snippet-command-line">
-                <code>
+  <pre class="terminal-snippet">
+                <code class="language-terminal">
 PS C:\Users\tommy\datamatiker\nodejs\mandatory_1> nodemon.cmd app.js
 [nodemon] 3.0.1
 [nodemon] to restart at any time, enter `rs`
