--- a/public/pages/nodejs/nodejs.html
+++ b/public/pages/nodejs/nodejs.html
@@ -36,8 +36,8 @@
 </p>
 <p></p>
 <h2>Eksempel på at oprette et Node-projekt med npm init:</h2>
-<pre class="snippet-command-line">
-    <code>
+<pre class="terminal-snippet">
+    <code class="language-terminal">
 PS C:\Users\tommy\datamatiker\test> npm init
 This utility will walk you through creating a package.json file.
 It only covers the most common items, and tries to guess sensible defaults.
