--- a/public/pages/express/express.html
+++ b/public/pages/express/express.html
@@ -22,5 +22,90 @@ PS C:\Users\tommy\datamatiker\nodejs\mandatory_1> nodemon.cmd app.js
 [nodemon] starting `node app.js`
 Server is running in port 8080
                 </code>
-            </pre>
+     </pre>
+
+     <pre class="code-snippet">
+        <code class="language-js">
+app.get("/mountains", (req, res) => {
+    res.send({ data: mountains })
+})
+
+app.get("/mountains/:id", (req, res) => {
+    const pathVariableMountainId = Number(req.params.id)
+    const mountainFound = mountains.find((mountain) => mountain.id === pathVariableMountainId)
+
+
+    if (!pathVariableMountainId || pathVariableMountainId < 1) {
+        res.send({ error: "Mountain id must be a number above 0" })
+
+    } else if (!mountainFound) {
+        res.send({ error: "No mountain found with that ID" })
+
+    } else {
+        res.send({ data: mountainFound })
+    }
+})
+
+
+app.post("/mountains", (req, res) => {
+    const newMountain = {
+        "id": ++count,
+        "name": req.body.name,
+        "height": req.body.height
+    }
+    
+    mountains.push(newMountain)
+    res.send({ data: newMountain })
+})
+
+app.delete("/mountains/:id", (req, res) => {
+    const pathVariableMountainId = Number(req.params.id)
+    const indexFound = mountains.findIndex((mountain) => mountain.id === pathVariableMountainId)
+
+    if (indexFound === -1) {
+        res.status(404).send({ error: "No mountain found with that ID" })
+
+    } else {
+        mountains.splice(indexFound, 1)
+        res.send({ data: pathVariableMountainId })
+    }
+})
+
+app.put("/mountains/:id", (req, res) => {
+    const pathVariableMountainId = Number(req.params.id)
+    const mountainFound = mountains.find((mountain) => mountain.id === pathVariableMountainId)
+    const index = mountains.indexOf(mountainFound)
+
+    if (!pathVariableMountainId || pathVariableMountainId < 1) {
+        res.send({ error: "Mountain ID must be a number above 0" })
+
+    } else if (!mountainFound) {
+        res.send({ error: "No mountain found with that ID" })
+
+    } else {
+        mountains[index].id = pathVariableMountainId
+        mountains[index].name = req.body.name
+        mountains[index].height = req.body.height
+        res.send({ data: mountainFound })
+    }
+})
+
+app.patch("/mountains/:id", (req, res) => {
+    const pathVariableMountainId = Number(req.params.id);
+    let foundIndex = mountains.findIndex((mountain) => mountain.id === pathVariableMountainId);
+
+    if (foundIndex === -1) {
+        res.status(404).send({ error: "No mountain found with that ID" })
+
+    } else {
+        mountains[foundIndex] = { ...mountains[foundIndex], ...req.body, id: pathVariableMountainId }
+
+        res.send({ data: mountains[foundIndex] })
+    }
+});
+            
+        </code>
+     </pre>
+
+
 <script type="module" src="pages/express/express.js"></script>
