--- a/public/pages/express/express.html
+++ b/public/pages/express/express.html
@@ -2,7 +2,7 @@
 <p>
     Express er et populært web framework til Node, som i programmet tager sig af HTTP requests, GET, POST, PUT, PATCH,
     DELETE, routing og statiske filer. Selve frameworket er meget minimalistisk, men der er mulighed for at installere
-    alskens packages lavet af andre udviklere fra community’et omkring Node. Det betyder, at man fra begyndelsen får et
+    alskens packages lavet af andre udviklere fra community'et omkring Node. Det betyder, at man fra begyndelsen får et
     framework skrabet helt ind til benet, som man selv skal bygge op, så det passer til ens program, i stedet for at
     have installeret packages, der aldrig vil blive brugt. Dette har betydning for den overordnede performance.
 </p>
@@ -231,6 +231,5 @@ C:.
     </code>
 </pre>
 
-
-
-<script type="module" src="pages/express/express.js"></script
+<script type="module" src="/pages/express/express.js"></script>
+    
