--- a/public/pages/javascript/javascript.html
+++ b/public/pages/javascript/javascript.html
@@ -239,6 +239,8 @@ const divide = (a, b) => {
     </code>
 </pre>
 
+<p></p>
+<h2>Objekter</h2>
 
 <p>De tre typer objekter, Object, Array og Date vil nedenfor forklares og gives eksempler på:</p>
 
