learning goals added and intro on frontpage edited

--- a/public/pages/import-export/import-export.html
+++ b/public/pages/import-export/import-export.html
@@ -34,7 +34,7 @@ import express from "express"
     I tilfælde af, at man ønsker at bruge ES6 og dets import/export-mulighed, skal man huske at tilføje key-value pair
     “type” og “module” til sin package.json-fil:
 </p>
-<pre class="json-snippet">
+<pre class="code-snippet">
     <code class="language-json">
 {
     "type": "module"
