--- a/public/pages/frontpage/frontpage.html
+++ b/public/pages/frontpage/frontpage.html
@@ -1,6 +1,6 @@
-  <h1>Forside til Mandatory I</h1>
+  <h1>Mandatory I</h1>
   <h3>Refleksioner over full-stack Node.js</h3>
   <p>Indholdet er ikke renskrevet, men er uddybede noter fra undervisningen.</p>
-  <p>Under "Læringsmål" kan man se, hvilke mål, der menes at være dækket og hvilke, der mangler.</p>
-  
+  <p>Under "Læringsmål" kan man se, hvilke mål, der menes at være dækket, og hvilke, der mangler.</p>
+
 <script type="module" src="/pages/frontpage/frontpage.js"></script>
