--- a/public/pages/login/login.html
+++ b/public/pages/login/login.html
@@ -1,4 +1,18 @@
 <h1>Login</h1>
 
+<form id="login-form" action="/login" method="post">
+    <div>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+    </div>
+    <div>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+    </div>
+    <div>
+        <button type="submit">Login</button>
+    </div>
+</form>
+<p id="status"></p>
 
 <script src="/pages/login/login.js"></script>
