--- a/public/pages/admin/admin.html
+++ b/public/pages/admin/admin.html
@@ -1,1 +1,6 @@
-<h2>Admin page</h2>
+<h1>Joeys <3</h1>
+<p></p>
+<img
+    src="https://scontent-cph2-1.xx.fbcdn.net/v/t1.15752-9/384562663_300810062695572_8491007967016801418_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=ae9488&_nc_ohc=k0GakdaBmjAAX-RD3Yt&_nc_oc=AQnfB4xaeJ9zmLyt_AlDQIWKYSh8cu3busz6H9YGGBkGN4wQry_yH82MvPS3NlSOWjI&_nc_ht=scontent-cph2-1.xx&cb_e2o_trans=t&oh=03_AdSDor5bRNJG3L8unGiLaKz6CEZ0f0tCjfPcBQNUc-vs6g&oe=6547F62D"
+    style="height: 400px; width: auto;"
+    >
