--- a/public/pages/learning-goals/learning-goals.html
+++ b/public/pages/learning-goals/learning-goals.html
@@ -8,7 +8,7 @@
     <li>Can explain what Node.js is and how to run files with it <span class="learning-goal-completed"></span></li>
     <li>Knows the existing data types in Javascript and can work with them <span class="learning-goal-completed"></span></li>
     <li>Understands type coercion and strategies to avoid it <span class="learning-goal-completed"></span></li>
-    <li>Can design a REST API. <span class="learning-goal-completed"></span></li>
+    <li>Can design a REST API <span class="learning-goal-completed"></span></li>
     <li>Knows the two REST conventions we will follow and why they exist and what they map to. (See the description in
         the Aber assignment) <span class="learning-goal-completed"></span>
     </li>
@@ -39,7 +39,7 @@
 <p>4: Time</p>
 <ul class="bullet-points">
     <li>Can create a full CRUDable REST API that follows conventions <span class="learning-goal-completed"></span></li>
-    <li>Can write a fetch request without hesitation</li>
+    <li>Can write a fetch request without hesitation <span class="learning-goal-completed"></span></li>
     <li>Can get the Date in Javascript <span class="learning-goal-completed"></span></li>
 </ul>
 
@@ -60,8 +60,8 @@
 
 <p>7: SSR (Server-side rendering)</p>
 <ul class="bullet-points">
-    <li>Can define and run scripts</li>
-    <li>Knows how to define environment variables natively in Node.js</li>
+    <li>Can define and run scripts <span class="learning-goal-completed"></span></li>
+    <li>Knows how to define environment variables natively in Node.js <span class="learning-goal-completed"></span></li>
     <li>Understands the arguments for and against SSR vs. CSR when it comes to:</li>
     <ol class="bullet-points">
         <li>Time</li>
